--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "yt-adblocker",
-  "displayName": "Yt adblocker",
-  "version": "0.0.1",
-  "description": "An ads blocker for youtube.",
+  "name": "yt-adblock",
+  "displayName": "Yt adblock",
+  "version": "1.0.1",
+  "description": "Yt-adblock is an ads blocker for youtube.",
   "author": "soukayna ben",
   "scripts": {
     "dev": "plasmo dev",
@@ -10,6 +10,7 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@types/webextension-polyfill": "^0.12.1",
     "plasmo": "0.89.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -24,11 +25,18 @@
     "postcss": "^8.4.49",
     "prettier": "3.2.4",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "webextension-polyfill": "^0.12.0"
   },
   "manifest": {
     "host_permissions": [
-      "https://*/*"
+      "https://*/*",
+      "http://*/*"
+    ],
+    "permissions": [
+      "tabs",
+      "activeTab",
+      "scripting"
     ]
   }
 }
