--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yt-adblock",
   "displayName": "Yt adblock",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Yt-adblock is an ads blocker for youtube.",
   "author": "soukayna ben",
   "scripts": {
@@ -27,6 +27,10 @@
     "tailwindcss": "^3.4.17",
     "typescript": "5.3.3",
     "webextension-polyfill": "^0.12.0"
+  },
+  "content_security_policy": {
+    "extension_pages":  "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' http://localhost:* http://127.0.0.1:*"
+    
   },
   "manifest": {
     "host_permissions": [
